--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <script type="module" src="/src/main.tsx" defer></script>
     <title>Form</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
